<resources>
    <string name="app_name">Landmark Notes</string>
    <string name="title_activity_maps">Map</string>

    <!--  "Add new note" xml Strings -->
    <string name="etTitle">Title</string>
    <string name="etDescription">Description</string>
    <string name="tvLocation">Location</string>
    <string name="tvDateText">Date</string>

    <string name="btnLogout">Log Out</string>
    <string name="btnAddNote">Add Note</string>

    <!-- "Add new note" form Strings -->
    <string name="formDefaultTitle">New Document</string>


    <!-- "GPS Alert Dialog" Strings -->
    <string name="alertTitle">LOCATION NOT FOUND!</string>
    <string name="alertPositive">GOT IT!</string>
    <string name="alertNegative">NO LA!</string>
    <string name="alertDescription">Please turn on Location Services.</string>


    <!-- "Notes List - list_layout" Strings -->
    <string name="tvListTitle">Title</string>
    <string name="tvListDescription">Description</string>

    <!-- "menu_add.xml" strings -->
    <string name="addNote">Add Note</string>
    <string name="mygeoNotes">My Geo-Notes</string>
    <string name="allgeoNotes">All Geo-Notes</string>
    <string name="logout">LogOut</string>

    <!-- "recycler view default text view" strings -->
    <string name="emptyText">"No Notes To Display"</string>

    <!-- "Default Note location" strings(In case we are unable to trace location) -->
    <string name="dfLat">1.279374</string>
    <string name="dfLon">103.8438739</string>
    <string name="dfFinalLocation">44 Tg Pagar Rd, Singapore</string>

</resources>
