<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_add_note"
        android:orderInCategory="100"
        android:title="@string/addNote"
        tools:ignore="AppCompatResource"
        compat:showAsAction="always"/>

    <item
        android:id="@+id/action_my_geo_notes"
        android:orderInCategory="101"
        android:title="@string/mygeoNotes"
        tools:ignore="AppCompatResource"
        compat:showAsAction="never"/>

    <item
        android:id="@+id/action_all_geo_notes"
        android:orderInCategory="102"
        android:title="@string/allgeoNotes"
        tools:ignore="AppCompatResource"
        compat:showAsAction="never"/>

    <item
        android:id="@+id/logout"
        android:orderInCategory="103"
        android:title="@string/logout"
        tools:ignore="AppCompatResource"
        compat:showAsAction="never"/>

</menu>